--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 .cells div:nth-child(odd) {
-    background-color: turquoise;
+    background-color: rgba(0,150,140,0.8);
 }
 
 
@@ -130,7 +130,7 @@ footer {
 
 article {
     grid-area: main;
-    background-color: turquoise;
+    background-color: rgba(0,150,140,0.8);
 }
 
 aside {
@@ -188,22 +188,66 @@ aside {
 
 }
 
+/*ALIGN AND JUSTIFY GRID ITEMS*/
 
+/*on grid container i.e. all items*/
+.grid-align {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-auto-rows: minmax(90px, auto);
+    grid-gap: 20px;
+    justify-items: stretch;
+    align-items: center;
+}
 
-
+/*on individual grid items*/
+.one {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    align-self: stretch;
+    justify-self: end;
+}
 
 
 .two {
-    grid-column:;
-    grid-row:;
+    grid-column: 3;
+    grid-row: 1 / 3;
 }
 
 .three {
-    grid-column:;
-    grid-row:;
+    grid-column: 2 / 4;
+    grid-row: 3;
 }
 
 .four {
-    grid-column:;
-    grid-row:;
+    grid-column: 1;
+    grid-row: 2 / 4;
+}
+
+
+
+
+/*ALIGN AND JUSTIFY THE GRID*/
+
+/*applies on all items*/
+.grid-align-grid {
+    display: grid;
+    grid-template-columns: 150px 150px 150px;
+    grid-auto-rows: 100px;
+    grid-gap: 20px;
+    width: 700px;
+    height: 500px;
+    border: 2px solid #666;
+    justify-content: space-between;
+    align-content: space-around;
+}
+
+.a {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+
+.d {
+    grid-column: 1;
+    grid-row: 2 / 4;
 }
